Add /ingest endpoint
